--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+    <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-junit5-mockito</artifactId>
+      <version>2.8.1.Final</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>io.rest-assured</groupId>
       <artifactId>rest-assured</artifactId>
       <scope>test</scope>
@@ -65,12 +71,24 @@
       <artifactId>jakarta.enterprise.cdi-api</artifactId>
       <version>2.0.2</version>
     </dependency>
+  
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-junit5</artifactId>
+      <version>1.5.2.Final</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
       <plugin>
         <groupId>${quarkus.platform.group-id}</groupId>
         <artifactId>quarkus-maven-plugin</artifactId>
+  
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.10.19</version>
+    </dependency>
         <version>${quarkus.platform.version}</version>
         <extensions>true</extensions>
         <executions>
